--- a/cards-prod.yml
+++ b/cards-prod.yml
@@ -2,7 +2,7 @@ build:
   version: "3.0"
 
 cards:
-  message: "Welcome to EazyBank cards related Prod APIs - cloud config "
+  message: "Welcome to EazyBank cards related Prod APIs - cloud config from git"
   contactDetails:
     name: "Mark Smith - Prod"
     email: "ms@eazybank.com"
