--- a/loans-uat.yml
+++ b/loans-uat.yml
@@ -2,7 +2,7 @@ build:
   version: "1.0"
 
 loans:
-  message: "Welcome to EazyBank cards related UAT APIs - cloud config "
+  message: "Welcome to EazyBank cards related UAT APIs - cloud config git config"
   contactDetails:
     name: "Pat Cummins - UAT"
     email: "pc@eazybank.com"
