--- a/cards-uat.yml
+++ b/cards-uat.yml
@@ -4,7 +4,7 @@ build:
 cards:
   message: "Welcome to EazyBank cards related UAT APIs - cloud config from git"
   contactDetails:
-    name: "Will Bakes - UAT changes"
+    name: "Will Bakes - uat changes"
     email: "wb@eazybank.com"
   onCallSupport:
     - (555) 555-0001
