--- a/accounts.yml
+++ b/accounts.yml
@@ -19,7 +19,7 @@ build:
   version: "1.0"
 
 accounts:
-  message: "Welcome to EazyBank accounts related local APIs from git"
+  message: "Welcome to EazyBank accounts related local APIs from git using webhooks"
   contactDetails:
     name: "John Doe - Developer"
     email: "john@eazybank.com"
