--- a/cards.yml
+++ b/cards.yml
@@ -1,19 +1,19 @@
 server:
   port: 9000
-spring:
-  datasource:
-    url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
-    username: sa
-    password: ''
-  h2:
-    console:
-      enabled: true
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    hibernate:
-      ddl-auto: update
-    show-sql: true
+# spring:
+#   datasource:
+#     url: jdbc:h2:mem:testdb
+#     driverClassName: org.h2.Driver
+#     username: sa
+#     password: ''
+#   h2:
+#     console:
+#       enabled: true
+#   jpa:
+#     database-platform: org.hibernate.dialect.H2Dialect
+#     hibernate:
+#       ddl-auto: update
+#     show-sql: true
 
 cards:
   message: "Welcome to EazyBank accounts related local APIs from git  "
